
cmake_minimum_required(VERSION 3.5)
project(demo C CXX)
SET(ROOT_DIR ${PROJECT_SOURCE_DIR})
SET(CMAKE_C_STANDARD 17)
SET(CMAKE_CXX_STANDARD 17)
# SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
SET(CMAKE_CXX_FLAGS "-Wall -fsanitize=address")
SET(CMAKE_CXX_FLAGS "-Wall -g --verbose")
set(ABSL_ENABLE_INSTALL ON)
# add_subdirectory(${ROOT_DIR}/third_party/nlohmann-json)
# add_subdirectory(${ROOT_DIR}/third_party/seastar)
add_subdirectory(${ROOT_DIR}/third_party/googletest)
# target_compile_options(seastar PRIVATE -w)
# add_subdirectory(rpc_demo)
add_subdirectory(test)
# add_subdirectory(table_demo)
# add_subdirectory(rocksdb_demo)
